src/test/ui/argument-suggestions/mixed_cases.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/mixed_cases.rs:10:3
   |
LL |   two_args(1, "", X {});
   |   ^^^^^^^^^-^^^^^^^^^^^
   |            |
   |            expected `f32`, found `i32`
   |            argument of type i32 unexpected
   |
note: function defined here
  --> $DIR/mixed_cases.rs:5:4
   |
LL | fn two_args(_a: i32, _b: f32) {}
   |    ^^^^^^^^ -------  -------
help: did you mean
   |
LL |   two_args(1, {f32});
   |   ^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/mixed_cases.rs:11:3
   |
LL |   three_args(1, "", X {}, "");
   |   ^^^^^^^^^^^-^^--^^^^^^^^^^^
   |              |  |
   |              |  an argument of type f32 is missing
   |              |  argument of type f32 unexpected
   |              argument of type i32 unexpected
   |
note: function defined here
  --> $DIR/mixed_cases.rs:6:4
   |
LL | fn three_args(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------
help: did you mean
   |
LL |   three_args(1, {f32}, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/mixed_cases.rs:14:3
   |
LL |   three_args(1, X {});
   |   ^^^^^^^^^^^-^^^^^^^
   |   |          |
   |   |          expected `f32`, found `i32`
   |   an argument of type &str is missing
   |
note: function defined here
  --> $DIR/mixed_cases.rs:6:4
   |
LL | fn three_args(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------
help: did you mean
   |
LL |   three_args(1, {f32}, {&str});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/mixed_cases.rs:17:3
   |
LL |   three_args(1, "", X {});
   |   ^^^^^^^^^^^^^^--^^^^^^^
   |                 |
   |                 an argument of type f32 is missing
   |                 argument of type f32 unexpected
   |
note: function defined here
  --> $DIR/mixed_cases.rs:6:4
   |
LL | fn three_args(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------
help: did you mean
   |
LL |   three_args(1, {f32}, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/mixed_cases.rs:20:3
   |
LL |   three_args("", X {}, 1);
   |   ^^^^^^^^^^^--^^^^^^^^-^
   |              |         |
   |              |         expected `&str`,found `{integer}`
   |              expected `i32`,found `&'static str`
   |              expected `f32`, found `&'static str`
   |
note: function defined here
  --> $DIR/mixed_cases.rs:6:4
   |
LL | fn three_args(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------
help: did you mean
   |
LL |   three_args(1, {f32}, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/mixed_cases.rs:23:3
   |
LL |   three_args("", 1);
   |   ^^^^^^^^^^^--^^-^
   |              |   |
   |              |   an argument of type f32 is missing
   |              |   expected `&str`,found `{integer}`
   |              expected `i32`,found `&'static str`
   |
note: function defined here
  --> $DIR/mixed_cases.rs:6:4
   |
LL | fn three_args(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------
help: did you mean
   |
LL |   three_args(1, {f32}, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0308`.
